changed header to position: sticky instead of fixed because content was appearing behind it on page load

--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -28,7 +28,7 @@ li {
 
 /* causes issues with calendar page */
 .header-con {
-    position: fixed;
+    position: sticky;
     top: 0;
     width: 100%;
     z-index: 1;
